import org.springframework.boot.gradle.tasks.run.BootRun

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.freefair.lombok" version "6.4.3"
    id 'application'
    id "org.gradle.test-retry" version "1.4.1"
    id "com.adarshr.test-logger" version "3.2.0"
}


jar {
    enabled = false
}

group = 'transit'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    localImplementation.extendsFrom implementation
    localRuntimeOnly.extendsFrom runtimeOnly
}


repositories {
    mavenCentral()
    maven {
        url "https://plugins.gradle.org/m2/"
    }

    maven { url 'https://jitpack.io' }


}

sourceSets {
    local {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

dependencies {
    // implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    //  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.jetbrains:annotations:24.0.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.quarkus:quarkus-hibernate-validator:2.13.3.Final'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.14.1'
    implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.2'

    annotationProcessor group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

}
configurations.implementation {
    exclude group: 'org.jboss.slf4j', module: 'slf4j-jboss-logmanager'
}


task local(type: BootRun) {

    mainClass = "com.transit.graphbased_v2.GraphBasedV2Application"
    classpath = sourceSets.local.runtimeClasspath
    jvmArgs = ['-Dspring.profiles.active=local', '-Dspring.config.additional-location=classpath:application.local.properties']

}


tasks.named('test') {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "local"

    minHeapSize = "1024m" // initial heap size
    maxHeapSize = "10240m" // maximum heap size
    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM

    jvmArgs = ['-Dspring.profiles.active=local', '-Dspring.config.additional-location=classpath:application.local.properties']
    retry {
        maxRetries = 3
        maxFailures = 50

        failOnPassedAfterRetry = true
    }


    testlogger {
        // pick a theme - mocha, standard, plain, mocha-parallel, standard-parallel or plain-parallel
        theme 'standard'

        // set to false to disable detailed failure logs
        showExceptions true

        // set to false to hide stack traces
        showStackTraces true

        // set to true to remove any filtering applied to stack traces
        showFullStackTraces false

        // set to false to hide exception causes
        showCauses true

        // set threshold in milliseconds to highlight slow tests
        slowThreshold 2000

        // displays a breakdown of passes, failures and skips along with total duration
        showSummary true

        // set to true to see simple class names
        showSimpleNames false

        // set to false to hide passed tests
        showPassed true

        // set to false to hide skipped tests
        showSkipped true

        // set to false to hide failed tests
        showFailed true

        // enable to see standard out and error streams inline with the test results
        showStandardStreams false

        // set to false to hide passed standard out and error streams
        showPassedStandardStreams true

        // set to false to hide skipped standard out and error streams
        showSkippedStandardStreams true

        // set to false to hide failed standard out and error streams
        showFailedStandardStreams true
    }
}

